zokrates_cli/examples/compile_errors/no_return.zok
def foo():

def main():
	return